--- a/index.html
+++ b/index.html
@@ -394,6 +394,95 @@
         </button>
         <p class="modal-name-title">Leave your contacts and we will call you back</p>
         <!-- Список -->
+        <div class="backdrop-modal-div">
+          <!-- modal-name -->
+          <div class="modal-name">
+            <form class="backdrop-form">name</form>
+
+            <label class="backdrop-label" for="reviews_user-name"></label>
+
+            <div class="modal-div">
+              <input
+                class="modal-div-input"
+                type="text"
+                id="reviews_user-name"
+                name="reviews_user-name"
+              />
+              <svg class="modal-div-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- modal-phone -->
+          <div class="modal-phone">
+            <form class="backdrop-form">phone</form>
+            <label class="backdrop-label" for="reviews_user-phone"></label>
+
+            <div class="modal-div">
+              <input
+                class="modal-div-input"
+                type="tel"
+                id="reviews_user-phone"
+                name="reviews_user-phone"
+              />
+              <svg class="modal-div-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- modal-Email -->
+          <div class="modal-Email">
+            <form class="backdrop-form">Email</form>
+            <label class="backdrop-label" for="reviews_user-email"></label>
+
+            <div class="modal-div">
+              <input
+                class="modal-div-input"
+                type="Email"
+                id="reviews_user-email"
+                name="reviews_user-email"
+              />
+              <svg class="modal-div-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- modal-Comment -->
+          <div class="modal-Comment">
+            <form class="backdrop-form">comment</form>
+            <label class="backdrop-label" for="reviews_user-comment"></label>
+            <textarea
+              class="modal-textarea"
+              name="reviews_user-comment"
+              id="reviews_user-comment"
+              rows="7"
+              placeholder="Text input"
+            ></textarea>
+
+            <div class="modal-div">
+              <input
+                class="modal-div-input"
+                type="Comment"
+                id="reviews_user-comment"
+                name="reviews_user-comment"
+              />
+            </div>
+          </div>
+          <div>
+            <label>
+              <input type="text" />
+              <span>
+                <svg class="" width="" height="">
+                  <use href=""></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-privacy link" href="" target="_blank" rel="noopener no-referrer"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+        </div>
       </div>
     </div>
     <script src="./css/modal.js"></script>
