--- a/index.html
+++ b/index.html
@@ -396,77 +396,77 @@
         <!-- Список -->
         <div class="backdrop-modal-div">
           <!-- modal-name -->
-          <div class="modal-name">
-            <form class="backdrop-form">name</form>
+          <div class="modal_name">
+            <form class="backdrop_form"
+              >Name
 
-            <label class="backdrop-label" for="reviews_user-name"></label>
+              <label class="backdrop_label" for="reviews_user-name"></label>
 
-            <div class="modal-div">
-              <input
-                class="modal-div-input"
-                type="text"
-                id="reviews_user-name"
-                name="reviews_user-name"
-              />
-              <svg class="modal-div-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-person-black"></use>
-              </svg>
-            </div>
+              <div class="modal_div">
+                <input
+                  class="modal_div_input"
+                  type="text"
+                  id="reviews_user_name"
+                  name="reviews_user_name"
+                />
+                <svg class="modal_div_icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person-black"></use>
+                </svg> </div
+            ></form>
           </div>
           <!-- modal-phone -->
           <div class="modal-phone">
-            <form class="backdrop-form">phone</form>
-            <label class="backdrop-label" for="reviews_user-phone"></label>
+            <form class="backdrop_form"
+              >Phone
 
-            <div class="modal-div">
-              <input
-                class="modal-div-input"
-                type="tel"
-                id="reviews_user-phone"
-                name="reviews_user-phone"
-              />
-              <svg class="modal-div-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone-black"></use>
-              </svg>
-            </div>
+              <label class="backdrop_label" for="reviews_user-phone"></label>
+
+              <div class="modal_div">
+                <input
+                  class="modal_div_input"
+                  type="tel"
+                  id="reviews_user_phone"
+                  name="reviews_user_phone"
+                />
+                <svg class="modal_div_icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone-black"></use>
+                </svg> </div
+            ></form>
           </div>
           <!-- modal-Email -->
-          <div class="modal-Email">
-            <form class="backdrop-form">Email</form>
-            <label class="backdrop-label" for="reviews_user-email"></label>
+          <div class="modal-email">
+            <form class="backdrop_form"
+              >Email
 
-            <div class="modal-div">
-              <input
-                class="modal-div-input"
-                type="Email"
-                id="reviews_user-email"
-                name="reviews_user-email"
-              />
-              <svg class="modal-div-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-email-black"></use>
-              </svg>
-            </div>
+              <label class="backdrop_label" for="reviews_user-email"></label>
+
+              <div class="modal_div">
+                <input
+                  class="modal_div_input"
+                  type="email"
+                  id="reviews_user_email"
+                  name="reviews_user_email"
+                />
+                <svg class="modal_div_icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email-black"></use>
+                </svg> </div
+            ></form>
           </div>
           <!-- modal-Comment -->
           <div class="modal-Comment">
-            <form class="backdrop-form">comment</form>
-            <label class="backdrop-label" for="reviews_user-comment"></label>
-            <textarea
-              class="modal-textarea"
-              name="reviews_user-comment"
-              id="reviews_user-comment"
-              rows="7"
-              placeholder="Text input"
-            ></textarea>
+            <form class="backdrop_form"
+              >Comment
 
-            <div class="modal-div">
-              <input
-                class="modal-div-input"
-                type="Comment"
-                id="reviews_user-comment"
-                name="reviews_user-comment"
-              />
-            </div>
+              <label class="backdrop_label" for="reviews_user-email"></label>
+
+              <div class="modal_div">
+                <input
+                  class="modal_div_input"
+                  type="text"
+                  id="reviews_user_comment"
+                  name="reviews_user_comment"
+                /> </div
+            ></form>
           </div>
           <div>
             <label>
