--- a/index.html
+++ b/index.html
@@ -386,8 +386,16 @@
         <div class="footer-div-input">
           <p class="footer-form-text">Subscribe</p>
           <div class="footer-div-email">
-            <form class="footer-form" action="">
-              <input class="footer-email" type="email" name="email" required placeholder="E-mail" />
+            <form class="footer-form">
+              <label class="footer-label" for=""></label>
+              <input
+                class="footer-email"
+                type="email"
+                id="reviews_user_email_footer"
+                name="reviews_user_email_footer"
+                required
+                placeholder="E-mail"
+              />
             </form>
             <div>
               <button type="button" class="footer-button">Subscribe</button>
