--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
             <use href="./images/icons.svg#icon-cross"></use>
           </svg>
         </button>
+        <div class="div-modal-model">
         <p class="modal-name-title">Leave your contacts and we will call you back</p>
         <!-- Список -->
         <div class="backdrop-modal-div">
@@ -517,6 +518,7 @@
         </div>
         <!-- Кнопка -->
         <button type="button" class="hero-button button-modal">Send</button></form>
+      </div>
       </div>
     </div>
     <script src="./css/modal.js"></script>
