--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     </footer>
     <!-- Модальне вікно -->
     <div class="backdrop is-hidden" data-modal>
-      <div class="backdrop-modal">
+      <!-- <div class="backdrop-modal"> -->
         <button type="button" class="backdrop-button" data-modal-close>
           <svg class="backdrop-button-modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-cross"></use>
