--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
           </p>
         </div>
         <div class="footer-media">
-          <p class="footer-text floor-content">Social media</p>
+          <p class="footer-text">Social media</p>
           <ul class="footer-list-element list">
             <li class="footer-list-element-media">
               <a class="footer-element-link" href="">
@@ -278,6 +278,27 @@
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg> </a></li
           ></ul>
+        </div>
+        <div class="footer-div-input">
+          <p class="footer-form-text">Subscribe</p>
+
+          <form class="footer-form">
+            <label class="footer-label" for="reviews_user_email_footer">
+              <input
+                class="footer-email"
+                type="email"
+                id="reviews_user_email_footer"
+                name="reviews_user_email_footer"
+                required
+                placeholder="E-mail"
+            /></label>
+
+            <button type="submit" class="footer-button"
+              >Subscribe
+              <svg class="footer-button-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane1"></use>
+              </svg> </button
+          ></form>
         </div>
       </div>
     </footer>
