--- a/index.html
+++ b/index.html
@@ -422,15 +422,15 @@
         <!-- modal-name -->
         <form class="modal-form">
           <div class="modal_name">
-            <label class="backdrop_label" for="reviews_user-name">Name</label>
+            <label class="backdrop_label" for="name-input">Name</label>
 
             <div class="modal_div">
               <input
                 class="modal_div_input"
                 type="text"
-                id="reviews_user_name"
+                id="name-input"
                 required
-                name="reviews_user_name"
+                name="name-input"
               />
               <svg class="modal_div_icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black"></use>
@@ -439,15 +439,15 @@
           </div>
           <!-- modal-phone -->
           <div class="modal-phone">
-            <label class="backdrop_label" for="reviews_user-phone">Phone</label>
+            <label class="backdrop_label" for="phone-input">Phone</label>
 
             <div class="modal_div">
               <input
                 class="modal_div_input"
                 required
                 type="tel"
-                id="reviews_user_phone"
-                name="reviews_user_phone"
+                id="phone-input"
+                name="phone-input"
               />
               <svg class="modal_div_icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone-black"></use>
@@ -456,15 +456,15 @@
           </div>
           <!-- modal-Email -->
           <div class="modal-email">
-            <label class="backdrop_label" for="reviews_user-email">Email</label>
+            <label class="backdrop_label" for="email-input">Email</label>
 
             <div class="modal_div">
               <input
                 class="modal_div_input"
                 required
                 type="email"
-                id="reviews_user_email"
-                name="reviews_user_email"
+                id="email-input"
+                name="email-input"
               />
               <svg class="modal_div_icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email-black"></use>
@@ -490,10 +490,10 @@
             <input
               class="visually-hidden checkbox-class"
               type="checkbox"
-              name="user_privas"
-              id="user_privas"
+              name="Comment-input"
+              id="Comment-input"
             />
-            <label class="checkbox-label" for="user_privas">
+            <label class="checkbox-label" for="Comment-input">
               <span class="checkbox-span">
                 <svg class="checkbox-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
