--- a/index.html
+++ b/index.html
@@ -387,12 +387,12 @@
           <p class="footer-form-text">Subscribe</p>
 
           <form class="footer-form">
-            <label class="footer-label" for="reviews_user_email_footer">
+            <label class="footer-label" for="footer-input">
               <input
                 class="footer-email"
                 type="email"
-                id="reviews_user_email_footer"
-                name="reviews_user_email_footer"
+                id="footer-input"
+                name="footer-input"
                 required
                 placeholder="E-mail"
             /></label>
@@ -473,7 +473,7 @@
           </div>
           <!-- modal-Comment -->
           <div class="modal-Comment">
-            <label class="backdrop_label" for="reviews_user-comment">Comment</label>
+            <label class="backdrop_label" for="modal_textarea">Comment</label>
 
             <div class="modal_div modal_div_comment">
               <textarea
