--- a/portfolio.html
+++ b/portfolio.html
@@ -283,12 +283,12 @@
           <p class="footer-form-text">Subscribe</p>
 
           <form class="footer-form">
-            <label class="footer-label" for="reviews_user_email_footer">
+            <label class="footer-label" for="footer-input">
               <input
                 class="footer-email"
                 type="email"
-                id="reviews_user_email_footer"
-                name="reviews_user_email_footer"
+                id="footer-input"
+                name="footer-input"
                 required
                 placeholder="E-mail"
             /></label>
