--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <!-- <div class="backdrop-modal-div"> -->
         <!-- modal-name -->
         <form class="modal-form">
-          <div class="modal_name">
+          <div class="modal-div-form">
             <label class="backdrop_label" for="name-input">Name</label>
 
             <div class="modal_div">
@@ -432,13 +432,13 @@
                 required
                 name="name-input"
               />
-              <svg class="modal_div_icon" width="18" height="18">
+              <svg class="modal_div_icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <!-- modal-phone -->
-          <div class="modal-phone">
+          <div class="modal-div-form">
             <label class="backdrop_label" for="phone-input">Phone</label>
 
             <div class="modal_div">
@@ -449,13 +449,13 @@
                 id="phone-input"
                 name="phone-input"
               />
-              <svg class="modal_div_icon" width="18" height="18">
+              <svg class="modal_div_icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
           <!-- modal-Email -->
-          <div class="modal-email">
+          <div class="modal-div-form">
             <label class="backdrop_label" for="email-input">Email</label>
 
             <div class="modal_div">
@@ -466,13 +466,13 @@
                 id="email-input"
                 name="email-input"
               />
-              <svg class="modal_div_icon" width="18" height="18">
+              <svg class="modal_div_icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
           <!-- modal-Comment -->
-          <div class="modal-Comment">
+          <div class="modal-div-form">
             <label class="backdrop_label" for="modal_textarea">Comment</label>
 
             <div class="modal_div modal_div_comment">
@@ -486,7 +486,7 @@
               ></textarea>
             </div>
           </div>
-          <div class="checkbox-div">
+          <div class="modal-div-form">
             <input
               class="visually-hidden checkbox-class"
               type="checkbox"
