--- a/index.html
+++ b/index.html
@@ -422,16 +422,10 @@
         <!-- modal-name -->
         <form class="modal-form">
           <div class="modal-div-form">
-            <label class="backdrop_label" for="name-input">Name</label>
+            <label class="backdrop_label" for="user-name">Name</label>
 
             <div class="modal_div">
-              <input
-                class="modal_div_input"
-                type="text"
-                id="name-input"
-                required
-                name="name-input"
-              />
+              <input class="modal_div_input" type="text" id="user-name" required name="user-name" />
               <svg class="modal_div_icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
