--- a/index.html
+++ b/index.html
@@ -467,13 +467,13 @@
           </div>
           <!-- modal-Comment -->
           <div class="modal-div-form">
-            <label class="backdrop_label" for="modal_textarea">Comment</label>
+            <label class="backdrop_label" for="user-comment">Comment</label>
 
             <div class="modal_div modal_div_comment">
               <textarea
                 class="textarea"
-                name="modal_textarea"
-                id="modal_textarea"
+                name="user-comment"
+                id="user-comment"
                 placeholder="Text input"
                 cols="30"
                 rows="10"
