--- a/index.html
+++ b/index.html
@@ -480,14 +480,15 @@
               ></textarea>
             </div>
           </div>
-          <div class="modal-div-form">
+          <div class="checkbox-div">
             <input
               class="visually-hidden checkbox-class"
               type="checkbox"
-              name="Comment-input"
-              id="Comment-input"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
             />
-            <label class="checkbox-label" for="Comment-input">
+            <label class="checkbox-label" for="user-privacy">
               <span class="checkbox-span">
                 <svg class="checkbox-svg" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
