--- a/index.html
+++ b/index.html
@@ -466,18 +466,16 @@
             </div>
           </div>
           <!-- modal-Comment -->
-          <div class="modal-div-form">
-            <div class="modal_div modal_div_comment">
-              <label class="backdrop_label" for="user-comment">Comment</label>
-              <textarea
-                class="textarea"
-                name="user-comment"
-                id="user-comment"
-                placeholder="Text input"
-                cols="30"
-                rows="10"
-              ></textarea>
-            </div>
+          <div class="modal-div-form modal_div modal_div_comment">
+            <label class="backdrop_label" for="user-comment">Comment</label>
+            <textarea
+              class="textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              cols="30"
+              rows="10"
+            ></textarea>
           </div>
           <div class="checkbox-div">
             <input
